[package]
name = "jom"
version = "0.1.2"
authors = ["Ziyad Boshima"]
description = "A crate to convert JSON data to markdown by replacing placeholders with JSON values."
repository = "https://github.com/ZiyadBoshima/jom"
license = "MIT"
edition = "2021"

exclude = ["src/main.rs"]

[dependencies]
serde_json = "1.0"
regex = "1.11.1"
